--- a/kustomize/service.yml
+++ b/kustomize/service.yml
@@ -15,11 +15,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gke-test-service
+  name: aks-test-service
 spec:
   type: LoadBalancer
   ports:
     - port: 3000
       targetPort: 3000
   selector:
-    app: gke-test
+    app: aks-test
